src/ToDo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  namespace: default
  labels:
    app: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: todo
      containers:
        - name: todo
          image: vsofttodo00.azurecr.io/todo-app/todo:abc
          ports:
            - containerPort: 8080
          resources: {}
