src/ToDo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  namespace: default
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: todo.team0.vsoft.patoarchitekci.io
    http:
      paths:
      - backend:
          service:
            name: todo
            port:
              number: 80
        path: /
        pathType: Prefix
